--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,7 @@
-/*  your css code here. If applicable */
-.middle{
-	text-align:center;
+td{
+	border:1px solid black;
+	padding:1px;
 }
-.center{
-	text-align:center;
-}
-.right{
-	text-align:right;
-}
-.green{
-	background-color:green;
-}
-.blue{
-	background-color:blue;
+table{
+	border-spacing:1px;
 }
